<resources>
    <string name="app_name">MZ</string>
    <string name="menu_translator">번역기</string>
    <string name="menu_quiz">밈 퀴즈</string>
    <string name="menu_discussion">토론방</string>
    <string name="menu_trend">소비 트랜드</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="id_hint">아이디를 입력해주세요.</string>
    <string name="pwd_hint">비밀번호를 입력해주세요.</string>

    <!-- 토론방 -->
    <string name="discussion_title">토론방</string>
    <string name="discussion_post_add">글 작성</string>
    <string name="post_like_count">공감 %d</string>
    <string name="post_comment_count">댓글 %d</string>
    <string name="comment_hint">댓글을 입력해 주세요.</string>
    <string name="comment_empty">아직 댓글이 없습니다\n첫 댓글을 남겨주세요</string>

    <!-- 번역기 -->
    <string name="word_recent">신조어</string>
    <string name="word_old">옛말</string>
    <string name="discussion_post_content_hint">내용을 입력해주세요.</string>
    <string name="discussion_post_title_hint">제목을 입력해주세요.</string>
</resources>