<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/translatorFragment"
        android:icon="@drawable/ic_nav_translator"
        android:title="@string/menu_translator"
        android:enabled="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_nav_quiz"
        android:title="@string/menu_quiz"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/discussionFragment"
        android:icon="@drawable/ic_nav_discussion"
        android:title="@string/menu_discussion"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/trendFragment"
        android:icon="@drawable/ic_nav_trend"
        android:title="@string/menu_trend"
        android:enabled="true"
        app:showAsAction="always"/>
</menu>