<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.nahyun.mz.ui.discussion.DiscussionAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_iv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discussion_post_add"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/back_iv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:hint="@string/discussion_post_title_hint"
            android:textColorHint="@color/hint"
            android:textSize="16sp"
            android:text="@={viewModel.titleText}"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/header_cl"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/tint"
            app:layout_constraintTop_toBottomOf="@id/title_et"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:background="@null"
            android:hint="@string/discussion_post_content_hint"
            android:text="@={viewModel.contentText}"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/separator"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingVertical="16dp"
            android:text="완료"
            android:onClick="@{() -> viewModel.registerPost()}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/bg_basic_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>