<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isShowPassword"
            type="Boolean"/>
        <import type="android.text.InputType"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="26dp"
        android:background="@color/background">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/login_logo_cv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="110dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_logo"/>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/login_id_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:paddingHorizontal="18dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/id_hint"
            android:textColorHint="@color/hint"
            android:backgroundTint="@color/secondary"
            android:background="@drawable/bg_basic_btn"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/login_logo_cv"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="18dp"
            android:gravity="center_vertical"
            android:backgroundTint="@color/secondary"
            android:background="@drawable/bg_basic_btn"
            app:layout_constraintTop_toBottomOf="@id/login_id_et">
            <EditText
                android:id="@+id/login_pwd_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pwd_hint"
                android:textColorHint="@color/hint"
                android:inputType="@{isShowPassword ? InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD }"
                android:singleLine="true"
                android:textSize="14sp"
                android:layout_marginEnd="8dp"
                android:background="@null" />
            <ImageView
                android:id="@+id/login_pwd_show_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@{isShowPassword ? @drawable/ic_password_show : @drawable/ic_password_hide }"
                tools:src="@drawable/ic_password_show"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingVertical="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/bg_basic_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>