<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="method"
            type="com.nahyun.mz.ui.discussion.DiscussionDetailActivity" />
        <variable
            name="viewModel"
            type="com.nahyun.mz.ui.discussion.DiscussionDetailViewModel" />
        <variable
            name="author"
            type="com.nahyun.mz.domain.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 헤더 -->
        <LinearLayout
            android:id="@+id/discussion_detail_header"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:orientation="horizontal"
            android:background="@drawable/quiz_mz_header"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/discussion_detail_back_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/discussion_title"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/discussion_detail_header"
            app:layout_constraintBottom_toTopOf="@id/comment_input_ll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- 본문 -->
                <LinearLayout
                    android:id="@+id/post_content_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/writer_cl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="25dp"
                        android:paddingVertical="12dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/writer_profile_cv"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:cardElevation="0dp"
                            app:cardCornerRadius="14dp"
                            android:overScrollMode="never"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" >

                            <ImageView
                                android:id="@+id/writer_profile_iv"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                profileImage="@{author.profileUrl}"
                                tools:src="@drawable/ic_profile_default"/>

                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:orientation="vertical"
                            app:layout_constraintStart_toEndOf="@id/writer_profile_cv"
                            app:layout_constraintTop_toTopOf="@id/writer_profile_cv"
                            app:layout_constraintBottom_toBottomOf="@id/writer_profile_cv">

                            <TextView
                                android:id="@+id/nickname_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.post.author}"
                                android:textSize="12sp"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                tools:text="사용자 이름"/>

                            <TextView
                                android:id="@+id/time_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                formattedDate="@{viewModel.post.createdAt}"
                                tools:text="2일 전"
                                android:textSize="12sp"
                                android:textColor="@color/hint"/>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:id="@+id/content_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="25dp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/writer_cl">

                        <TextView
                            android:id="@+id/post_title_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.post.title}"
                            android:textIsSelectable="true"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="제목"/>

                        <TextView
                            android:id="@+id/post_content_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:autoLink="web"
                            android:textIsSelectable="true"
                            android:text="@{viewModel.post.content}"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:text="내용"/>

                        <ImageView
                            android:id="@+id/image_rv"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="25dp"
                            android:visibility="@{viewModel.post.imageUrl.empty ? View.GONE : View.VISIBLE}"
                            imageUrl="@{viewModel.post.imageUrl}"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/content_ll"
                        android:layout_marginTop="22dp"
                        android:paddingHorizontal="22dp"
                        android:paddingVertical="12dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/post_like_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:drawableStart="@{viewModel.post.isLike ? @drawable/ic_like_fill : @drawable/ic_like}"
                            android:text="@{@string/post_like_count(viewModel.post.likeCount)}"
                            tools:text="공감 1"
                            android:textSize="12sp"
                            android:textColor="@color/like"
                            android:drawablePadding="2dp"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/post_comment_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_comment"
                            android:text="@{@string/post_comment_count(viewModel.post.commentCount)}"
                            tools:text="댓글 2"
                            android:textSize="12sp"
                            android:textColor="@color/comment"
                            android:drawablePadding="2dp"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:visibility="@{viewModel.post.commentCount == 0 ? View.VISIBLE : View.GONE}"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textColor="@color/hint"
                    android:text="@string/comment_empty"
                    android:layout_gravity="center_horizontal"/>

                <!-- 댓글 -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/post_comment_rv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_comment"/>
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingHorizontal="-13dp"
            android:background="@color/tint"
            app:layout_constraintBottom_toTopOf="@id/comment_input_ll"/>

        <!-- 댓글 입력 -->
        <LinearLayout
            android:id="@+id/comment_input_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/comment_input_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:focusable="true"
                android:padding="13dp"
                android:focusableInTouchMode="true"
                android:textSize="14sp"
                android:background="@color/transparent"
                android:text="@={viewModel.commentText}"
                android:hint="@string/comment_hint"
                android:textColorHint="@color/hint"/>

            <ImageView
                android:id="@+id/comment_send_iv"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="4dp"
                android:layout_marginEnd="13dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/main"
                android:background="@drawable/quiz_circle_purple_light"
                android:onClick="@{() -> viewModel.postComment()}"
                android:src="@drawable/ic_send"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>